--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.3.7",
+        "@tiptap/extension-text-align": "^3.15.3",
+        "@tiptap/extension-underline": "^3.15.3",
+        "@tiptap/starter-kit": "^3.15.3",
+        "@tiptap/vue-3": "^3.15.3",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
